# src/WebApp.Client/swagger.json
@@ -300,6 +300,10 @@
           "id": {
             "type": "integer",
             "format": "int32"
+          },
+          "currentPlayerId": {
+            "type": "integer",
+            "format": "int32"
           }
         }
       },
